# 3-python-package-exercise-liatha3

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yml  python-package.yml
src/babpy/: __main__.py  talk.py
src/bapy/: __main__.py  bapy.py  test_bapy.py
tests/: test_fooloo.py  test_fuh.py  test_lizzie.py  test_puhoo.py  test_wuhoo.py
