[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baPy"
description = "A baby language python package"
version = "0.0.1"
authors = [
  { name="Harry Minksy", email="harry.minsky@gmail.com" },
  { name="Athena Leong", email="ayl215@nyu.edu"},
  { name="Lianna Poblete", email="lnp2016@nyu.edu"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2023/3-python-package-exercise-liatha3"
"Repository" = "https://github.com/software-students-fall2023/3-python-package-exercise-liatha3.git"
"Bug Tracker" = "https://github.com/software-students-fall2023/3-python-package-exercise-liatha3/issues"

[project.scripts]
bapy = "bapy.__main__:main"

# [testpypi]
#   username = "__token__"
#   password = "pypi-AgENdGVzdC5weXBpLm9yZwIkYjBkZGYwYjItMmM3MS00NTZlLTg5YTEtZmEzYmEyMWQ1NWM1AAIqWzMsIjg5YmE2ZGQ4LWUwMzgtNGNkYy1hYzRjLWU4ZjRmMmZlNWZhZCJdAAAGIEs6W0mYMwHUfTB4A1It1ykmxjU2ATieKCeyoZ6s1yyc"